# opencv_practise

./: .gitignore  CMakeLists.txt  README.md  chapter1_demo.cpp  chapter1_video.cpp  main.cpp
